--- a/env.yaml
+++ b/env.yaml
@@ -1,1 +1,1 @@
-MONGO_DB_URL: mongodb://localhost:27017/
+MONGO_DB_URL: mongodb+srv://manuviju:manudata@cluster0.3p4hwck.mongodb.net/?retryWrites=true&w=majority
